force-app/main/default/objects/Form_Session__c/Form_Session__c.object-meta.xml
<CustomObject>
    <label>Study Request Session</label>
    <nameField>
        <displayFormat>SRS-{00000}</displayFormat>
        <label>Study Request Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Request Sessions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>