force-app/main/default/objects/Form_Session__c/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <label>Current Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>