force-app/main/default/objects/Form_Session__c/fields/Expires_On__c.field-meta.xml
<CustomField>
    <fullName>Expires_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>