force-app/main/default/objects/Form_Session__c/fields/Final_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Final_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>