force-app/main/default/objects/Form_Session__c/fields/Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Session_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Session Token</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>