force-app/main/default/objects/Form_Session__c/fields/Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>