force-app/main/default/objects/Form_Session__c/fields/Verification_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Verification_Sent_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Sent On</label>
    <type>DateTime</type>
</CustomField>