force-app/main/default/objects/Form_Session__c/fields/Wizard_Type__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wizard Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>